--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
 
 <body>
     <div class="column">
-        <div class="wrap">
-            <div class="card">
+        <div class="row">
+            <div class="wrap">
+                <div class="header">
+                    <h3>Do you remember it?</h3>
+                </div>
 
-            </div>
+                <div class="card">
 
-            <div class="response">
-                <div class="button yes">hai</div>
-                <div class="button no">iie</div>
+                </div>
+
+                <div class="response">
+                    <div class="button yes">Yes</div>
+                    <div class="button no">No</div>
+                </div>
             </div>
         </div>
     </div>
